--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,10 @@ requires = ["poetry-core >= 2.0.0, <3.0.0 "]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.13"
 opencv-python = "^4"
+pre-commit = "^4.3.0"
+flask = "^3.1.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4"
