--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python = "^3.13"
 opencv-python = "^4"
 pre-commit = "^4.3.0"
 flask = "^3.1.2"
+ruff = "^0.14.4"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4"
