--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,36 @@
-[tool.poetry]
+[project]
 name = "TS341"
 version = "0.1.0"
 description = "A Python package for TS341"
-authors = ["Amandine, Anthony, Clément, Mathis"]
 readme = "README.md"
-packages = [{include = "./ts341_example/"},
-          {include = "./ts341_project/"}]
+
+authors = [
+    { name = "Amandine", email = "amandine.email@bordeaux-inp.fr" },
+    { name = "Anthony", email = "anthony.email@bordeaux-inp.fr" },
+    { name = "Clément", email = "clement.email@bordeaux-inp.fr" },
+    { name = "Mathis Pereira Pedro", email = "mpereiraped@bordeaux-inp.fr" },
+]
+
+dependencies = ["opencv-python >=4", "flask >= 3.1.2", "ruff >= 0.14.4"]
+
+requires-python = ">=3.13"
 
 [build-system]
 requires = ["poetry-core >= 2.0.0, <3.0.0 "]
 build-backend = "poetry.core.masonry.api"
 
-[tool.poetry.dependencies]
-python = "^3.13"
-opencv-python = "^4"
-pre-commit = "^4.3.0"
-flask = "^3.1.2"
-ruff = "^0.14.4"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4"
+pre-commit = "^4.3.0"
 
-[tool.poetry.scripts]
+[tool.poetry]
+package-mode = false
+#NOTE: Pour le moment, nous n'exportons pas de pacquets
+# packages = [{ include = "./ts341_example/" }, { include = "./ts341_project/" }]
+
+[project.scripts]
 main = ""
+
+[tool.ruff.lint]
+select = ["E4", "E7", "E9", "F"]
