--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,4 +30,4 @@ jobs:
         run: pytest --cov=your_package || echo "No tests yet, skipping coverage check"
       #NOTES: For the moment there is no types, to prevent CI failures
       - name: Check types
-        run: npx pyright || echo "No typing yet, comming soon"
+        run: poetry run pyright || echo "No typing yet, comming soon"
