--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,19 +17,17 @@ jobs:
         with:
           python-version: "3.13"
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pre-commit pytest pytest-cov pyright
+      - name: Install Poetry
+        run: pip install poetry
 
-      - name: Run pre-commit hooks
-        run: pre-commit run --all-files
+      - name: Install deps
+        run: poetry install
 
-      #NOTE: For the moment there is no tests, then this part is skipped
-      - name: Run tests with coverage (optional)
-        run: pytest --cov=your_package || echo "No tests yet, skipping coverage check"
-      #NOTES: For the moment there is no types, to prevent CI failures
-      - name: Check types
-        run: poetry run pyright || echo "No typing yet, comming soon"
-      - name: Check types (optional)
-        run: poetry run pyright || echo "No typing yet, comming soon"
+      - name: Run pre-commit
+        run: poetry run pre-commit run --all-files
+
+      - name: Run tests
+        run: poetry run pytest --cov=your_package || echo "No tests yet"
+
+      - name: Type check
+        run: poetry run pyright || echo "No typing yet"
