--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,8 @@ __marimo__/
 
 # Streamlit
 .streamlit/secrets.toml
+
+# Vidéos & images
+ts341_project/model_training/sim2real_approach/nature_BG_dataset/*
+videos/
+*.blend1
