--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "ruff >= 0.14.4",
     "ultralytics (>=8.3.228,<9.0.0)",
     "opencv-contrib-python (>=4.12.0.88,<5.0.0.0)",
+    "matplotlib (>=3.10.7,<4.0.0)",
 ]
 
 requires-python = ">=3.13"
@@ -30,6 +31,15 @@ build-backend = "poetry.core.masonry.api"
 pytest = "^7.4"
 pre-commit = "^4.3.0"
 
+
+[[tool.poetry.source]]
+name = "pypi2"
+url = "https://pypi.org/simple"
+priority = "primary"
+
+
+[tool.poetry.dependencies]
+matplotlib = {source = "pypi2"}
 [tool.poetry]
 package-mode = false
 #NOTE: Pour le moment, nous n'exportons pas de pacquets
