--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "ruff >= 0.14.4",
     "ultralytics (>=8.3.228,<9.0.0)",
     "opencv-contrib-python (>=4.12.0.88,<5.0.0.0)",
+    "pyright (>=1.1.407,<2.0.0)",
 ]
 
 requires-python = ">=3.13"
