--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "ultralytics (>=8.3.228,<9.0.0)",
     "opencv-contrib-python (>=4.12.0.88,<5.0.0.0)",
     "pyright (>=1.1.407,<2.0.0)",
+    "logging (>=0.4.9.6,<0.5.0.0)",
 ]
 
 requires-python = ">=3.12"
