--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,23 +15,27 @@ authors = [
 dependencies = [
     "opencv-python >=4",
     "flask >= 3.1.2",
-    "ruff >= 0.14.4",
     "ultralytics (>=8.3.228,<9.0.0)",
     "opencv-contrib-python (>=4.12.0.88,<5.0.0.0)",
-    "pyright (>=1.1.407,<2.0.0)",
-    "logging (>=0.4.9.6,<0.5.0.0)",
 ]
 
-requires-python = ">=3.12"
+requires-python = ">=3.13"
 
 [build-system]
-requires = ["poetry-core >= 2.0.0, <3.0.0 "]
+requires = ["poetry-core >=2.0.0,<3.0.0", "poetry-plugin-python >=0.2.0"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.poetry-python]
+python = ">=3.13"
+
+[tool.poetry.group.dev]
+optional = true
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4"
 pre-commit = "^4.3.0"
+ruff = ">=0.14.4"
+pyright = ">=1.1.407,<2.0.0"
 
 [tool.poetry]
 package-mode = false
