--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,7 +19,7 @@ jobs:
           python-version: "3.13"
 
       - name: Install Poetry
-        run: pip install poetry
+        run: pip install poetry --with dev
 
       - name: Install deps
         run: poetry install
