--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,10 +19,10 @@ jobs:
           python-version: "3.13"
 
       - name: Install Poetry
-        run: pip install poetry --with dev
+        run: pip install poetry
 
       - name: Install deps
-        run: poetry install
+        run: poetry install --with dev
 
       - name: Run pre-commit
         run: poetry run pre-commit run --all-files
