--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,10 @@ jobs:
       - name: Install Poetry
         run: pip install poetry
 
+      #INFO: Sometimes, poetry lock is needed to pass CI.
+      - name : Locking Poetry
+        run: poetry lock
+
       - name: Install deps
         run: poetry install --with dev
 
