adding dev because does not use poetry to docker

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,12 +33,12 @@ python = ">=3.13"
 optional = true
 
 [tool.poetry.group.dev.dependencies]
-# pytest = "^7.4"
-# pre-commit = "^4.3.0"
-# ruff = ">=0.14.4"
-# pyright = ">=1.1.407,<2.0.0"
-# matplotlib = ">=3.10.7,<4.0.0"
-#
+pytest = "^7.4"
+pre-commit = "^4.3.0"
+ruff = ">=0.14.4"
+pyright = ">=1.1.407,<2.0.0"
+matplotlib = ">=3.10.7,<4.0.0"
+
 
 [[tool.poetry.source]]
 name = "pypi2"
