--- a/.gitignore
+++ b/.gitignore
@@ -222,6 +222,9 @@ __marimo__/
 *.jpg
 *.txt
 
+# fichier
+*.mp4
+
 # Vidéos & images
 ts341_project/model_training/sim2real_approach/nature_BG_dataset/*
 videos/
